--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,30 @@
     background-color: #D7F9F8;
     /* background-color: #FBE0E0; */
 }
+/* style nav */
+nav li{
+    display:inline;
+    padding-right:20px;
+  
+}
+/* style nav */
+nav a{
+    color: black;
+    font-weight: bold;
+    text-decoration: none; 
+}
+
+/* style nav */
+nav{
+background-color: #2b7472;
+padding: 25px 0; 
+text-align: left;
+}
+
+/* add focus on nav */
+a:focus, a:hover {
+    text-decoration-line: underline;
+}
+h1,p{
+    text-align: center;
+}
