--- a/css/page2.css
+++ b/css/page2.css
@@ -8,3 +8,49 @@ img{
     height:593px;
     border: 5px solid #2E5984;
 }
+.images{
+    display: flex;
+    overflow: visible;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+    text-align: center;
+}
+.intro{
+    text-align: center;
+}
+/* style nav */
+nav li{
+    display:inline;
+    padding-right:20px;
+  
+}
+/* style nav */
+nav a{
+    color: black;
+    font-weight: bold;
+    text-decoration: none; 
+}
+
+
+
+
+/* style nav */
+nav{
+background-color: #2E5984;
+padding: 25px 0; 
+text-align: left;
+}
+
+/* add focus on nav */
+a:focus, a:hover {
+    text-decoration-line: underline;
+}
+/* .skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+} */
