--- a/css/page2.css
+++ b/css/page2.css
@@ -1,6 +1,5 @@
 *{
     background-color: #D6E6FF;
-    /* background-color: #E5D4EF; */
 }
 
 img{
@@ -8,33 +7,58 @@ img{
     height:593px;
     border: 5px solid #2E5984;
 }
-.images{
+.images ol{
     display: grid;
-    overflow: visible;
-   
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
-    /* flex-wrap: wrap; */
+    align-items: center;
+    
     gap: 15px;
     text-align: center;
+    padding: 0px;
 }
-.intro{
-    text-align: center;
+.httyd, .cars, .brave{
+    grid-row: 1/ span 1;
+}
+.spiderman,.bighero,.walle{
+
+    /* grid-column: 1/span 1; */
+    grid-row: 2/ span 1;
+}
+.mulan, .boots, .panda{
+   
+    /* grid-column: 3 /span 1; */
+    grid-row: 3 /span 1;
+}
+.intro p, h1{
+    display: flex;
+    justify-content: center;
+    /* text-align: center; */
 }
 /* style nav */
 nav li{
     display:inline;
     padding-right:20px;
+    background-color: #2E5984;
+    padding: 0px 20px 0px 20px;
   
+}
+nav ul{
+    display: flex;
+    background-color: #2E5984;
+    justify-content: center;
+    align-items: center;
+    padding-inline-start: 0px;
 }
 /* style nav */
 nav a{
     color: black;
     font-weight: bold;
     text-decoration: none; 
+    background-color: white;
+    padding: 20px;
+    border-radius: 40px;
 }
-
-
-
 
 /* style nav */
 nav{
