--- a/css/page3.css
+++ b/css/page3.css
@@ -6,21 +6,26 @@ img{
     height:593px;
     border: 5px solid #A94064;
 }
-.images{
-    display: flex;
-    overflow: visible;
+.images ol{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    
     gap: 15px;
     text-align: center;
+    padding: 0px;
 }
-.intro{
-    text-align: center;
+.intro p, h1{
+    display: flex;
+    justify-content: center;
+    
 }
 /* style nav */
 nav li{
     display:inline;
-    padding-right:20px;
+    padding: 0px 20px 0px 20px;
+    background-color: #A94064
   
 }
 /* style nav */
@@ -28,12 +33,22 @@ nav a{
     color: black;
     font-weight: bold;
     text-decoration: none; 
+    background-color: white;
+    padding: 20px;
+    border-radius: 40px;
 }
 /* style nav */
 nav{
 background-color: #A94064;
 padding: 25px 0; 
 text-align: left;
+}
+nav ul{
+    display: flex;
+    background-color: #A94064;
+    justify-content: center;
+    align-items: center;
+    padding-inline-start: 0px;
 }
 
 /* add focus on nav */
