--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ nav li{
 nav ul{
     display: flex;
     background-color: #2b7472;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     padding-inline-start: 0px;
 }
@@ -25,7 +25,7 @@ nav a{
     font-weight: bold;
     text-decoration: none; 
     background-color: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 40px;
 }
 
@@ -39,9 +39,54 @@ nav{
 
 /* add focus on nav */
 a:focus, a:hover {
-    text-decoration-line: underline;
+    background-color: #D7F9F8;
 }
 .intro h1, p{
     display: flex;
     justify-content: center;
+}
+h1{
+    font-size: 32px;
+    font-weight: bold;
+}
+h2{
+    font-size: 24px;
+    font-weight: bold;
+}
+.skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+}
+.skip a { 
+    position: absolute;
+    top: -40px;
+}
+.skip a:focus {
+    position: absolute;
+    top: 20px;
+}
+footer{
+    color: white;
+    background-color: #2b7472;
+}
+@media screen and (min-width: 600px) {
+    h1{
+        font-size: 20px;
+    }
+    nav ul{
+        justify-content: flex-start;
+    }
+}
+@media screen and (min-width: 800px) {
+    nav ul{
+        justify-content: flex-end;
+    }
+    h1{
+        font-size: 32px;
+        
+    }
 }
