--- a/css/page1.css
+++ b/css/page1.css
@@ -4,17 +4,20 @@
     /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
-.images img, .tv img{
-    width:400px;
-    height:593px;
+img{
+    width: 50%;
     border: 5px solid #7b2089;
     padding: 0px;
    
 }
+.tv img{
+    width: 75%;
+    height: 55%;
+}
 
 .images ol{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr; */
     justify-content: center;
     align-items: center;
     
@@ -37,8 +40,18 @@
 .intro h1, .intro p, .tv p, .tv h1{
     display: flex;
     justify-content: center;
-    /* text-align: center; */
+    text-align: center;
     
+}
+h1, h2{
+    font-weight: bold;
+}
+h1{
+    font-size: 20px;
+
+}
+h2{
+    font-size: 18px;
 }
 
 /* style nav */
@@ -61,7 +74,7 @@ nav a{
     font-weight: bold;
     text-decoration: none; 
     background-color: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 40px;
 }
 nav{
@@ -72,5 +85,97 @@ nav{
 
 /* add focus on nav */
 a:focus, a:hover {
-    text-decoration-line: underline;
+    /* text-decoration-line: underline; */
+    background-color: #E5D4EF;
+
 }
+.skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+}
+.skip a { 
+    position: absolute;
+    top: -40px;
+}
+.skip a:focus {
+    position: absolute;
+    top: 20px;
+}
+footer{
+    background-color: #7b2089;
+    color: white;
+    
+}
+@media screen and (min-width: 600px) {
+    h1{
+        font-size: 20px;
+    }
+    h2{
+        font-size: 15px;
+    }
+    nav ul{
+        justify-content: flex-start;
+    }
+    .images ol{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        
+        grid-gap: 15px;
+        text-align: center;
+        padding: 0px;
+    }
+    .tv ol{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        
+        gap: 15px;
+        text-align: center;
+        padding: 0px;
+    }
+    img{
+        width:60%;
+    }
+}
+@media screen and (min-width: 800px) {
+    nav ul{
+        justify-content: flex-end;
+    }
+    .images ol{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        
+        gap: 15px;
+        text-align: center;
+        padding: 0px;
+    }
+    .tv ol{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        
+        gap: 15px;
+        text-align: center;
+        padding: 0px;
+    }
+    h1{
+        font-size: 32px;
+    }
+    h2{
+        font-size: 24px;
+    }
+    img{
+        width: 80%;
+    }
+}
+  
