--- a/css/page3.css
+++ b/css/page3.css
@@ -2,13 +2,11 @@
     background-color: rgb(255, 222, 227);
 }
 img{
-    width:400px;
-    height:593px;
+    width:55%;
     border: 5px solid #A94064;
 }
 .images ol{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
     
@@ -19,7 +17,16 @@ img{
 .intro p, h1{
     display: flex;
     justify-content: center;
+    text-align: center;
     
+}
+h1{
+    font-size: 32px;
+    font-weight: bold;
+}
+h2{
+    font-size: 24px;
+    font-weight: bold;
 }
 /* style nav */
 nav li{
@@ -34,7 +41,7 @@ nav a{
     font-weight: bold;
     text-decoration: none; 
     background-color: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 40px;
 }
 /* style nav */
@@ -53,5 +60,68 @@ nav ul{
 
 /* add focus on nav */
 a:focus, a:hover {
-    text-decoration-line: underline;
+    background-color: rgb(255, 222, 227);
+}
+.skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+}
+.skip a { 
+    position: absolute;
+    top: -40px;
+}
+.skip a:focus {
+    position: absolute;
+    top: 20px;
+}
+footer{
+    background-color: #A94064;
+    color: white;
+}
+@media screen and (min-width: 600px) {
+    h1{
+        font-size: 20px;
+    }
+    nav ul{
+        justify-content: flex-start;
+    }
+    .images ol{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        
+        grid-gap: 15px;
+        text-align: center;
+        padding: 0px;
+    }
+    img{
+        width: 60%;
+    }
+    
+}
+@media screen and (min-width: 800px) {
+    h1{
+        font-size: 32px;
+    }
+    nav ul{
+        justify-content: flex-end;
+    }
+    .images ol{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        
+        grid-gap: 15px;
+        text-align: center;
+        padding: 0px;
+    }
+    img{
+        width: 80%;
+    }
 }
