--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     /* background-color: rgb(255, 222, 227); */
     background-color: #D7F9F8;
     /* background-color: #FBE0E0; 2b7472*/
+    overflow: hidden;
 }
 /* style nav */
 /* style nav */
@@ -9,7 +10,7 @@ nav li{
     display:inline;
     padding-right:20px;
     background-color: #2b7472;
-    padding: 0px 20px 0px 20px;
+    /* padding: 0px 20px 0px 20px; */
   
 }
 nav ul{
