--- a/css/page2.css
+++ b/css/page2.css
@@ -1,8 +1,9 @@
 *{
     background-color: #D6E6FF;
+}
+main{
     overflow: hidden;
 }
-
 img{
     width:55%;
     border: 5px solid #2E5984;
@@ -37,7 +38,7 @@ nav li{
     display:inline;
     padding-right:20px;
     background-color: #2E5984;
-    /* padding: 0px 20px 0px 20px; */
+    padding: 0px 10px 0px 10px;
   
 }
 nav ul{
