--- a/css/page3.css
+++ b/css/page3.css
@@ -1,5 +1,7 @@
 *{
     background-color: rgb(255, 222, 227);
+}
+main{
     overflow: hidden;
 }
 img{
@@ -32,7 +34,7 @@ h2{
 /* style nav */
 nav li{
     display:inline;
-    /* padding: 0px 20px 0px 20px; */
+    padding: 0px 10px 0px 10px;
     background-color: #A94064
   
 }
