--- a/css/animated.css
+++ b/css/animated.css
@@ -69,7 +69,7 @@ text-align: left;
 }
 
 /* add focus on nav */
-a:focus, a:hover {
+nav a:focus, nav a:hover {
     background-color: #D6E6FF;
     border: solid 3px white;
     padding: 20px;
@@ -97,6 +97,13 @@ a:focus, a:hover {
 footer{
     background-color: #2E5984;
     color: white;
+}
+footer a{
+    color:white;
+}
+footer a:hover, footer a:focus{
+    border: solid 2px white;
+    padding: 10px;
 }
 @media screen and (min-width: 600px) {
     .images ol{
