--- a/css/marvel.css
+++ b/css/marvel.css
@@ -86,7 +86,7 @@ nav{
 }
 
 /* add focus on nav */
-a:focus, a:hover {
+nav a:focus, nav a:hover {
     /* text-decoration-line: underline; */
     background-color: #E5D4EF;
     border: solid 3px white;
@@ -117,6 +117,14 @@ footer{
     background-color: #7b2089;
     color: white;
     
+}
+footer a{
+    color: white;
+
+}
+footer a:hover, footer a:focus{
+    border: solid 2px white;
+    padding: 10px;
 }
 @media screen and (min-width: 600px) {
     h1{
