--- a/css/animated.css
+++ b/css/animated.css
@@ -77,6 +77,7 @@ nav a:focus, nav a:hover {
 .active{
     background-color: #D6E6FF;
     border: solid 3px white;
+    text-decoration: underline;
 }
 .skip a{
     background: white;
