--- a/css/home.css
+++ b/css/home.css
@@ -14,6 +14,7 @@
 .active{
     background-color: #D7F9F8;
     border: solid 3px white;
+    text-decoration: underline;
 }
 nav li{
     display:inline;
